src/src/assets/css/index.scss
@import "variables";
@import "resets";

:root {
  font-family: Montserrat, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color: $dark;
  background-color: $light;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#root {
  max-width: 1440px;
  margin: 0 auto;
  position: relative;

  >main {
    padding: 0 20px;

    &.home,
    &.menu,
    &.about {
      &:after {
        display: none;
      }
    }

    &:after {
      max-width: calc(100% - 40px);
      transform: translateX(20px);
    }

    &.about,
    &.publications,
    &.publication,
    &.patents,
    &.patent,
    &.consultancy {
      margin: 96px auto 58px;
      padding-bottom: 50px;

      @media screen and (min-width: 968px) {
        max-width: 100%;
        margin: 58px 0;

        &:after {
          display: inherit;
          max-width: calc(100% - 40px);
          transform: translateX(20px);
        }

        nav.menu {
          display: none;
        }
      }

      &.menuShown {
        padding-top: 83.3px;
      }

      nav.menu {
        position: fixed;
        top: 0;
        left: 0;
        background: $layer;
        height: 100vh;
        width: 100%;
        display: grid;
        place-items: center;
        opacity: 0.98;
        z-index: 1;
        animation: slide-in-left 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);

        @keyframes slide-in-left {
          0% {
            transform: translateX(-1000px);
            opacity: 0;
          }

          100% {
            transform: translateX(0);
            opacity: 1;
          }
        }

        ul {
          text-transform: uppercase;
          font-weight: 300;
          font-size: 24px;

          li {
            margin-bottom: 20px;

            &:last-of-type {
              margin-bottom: 0;
            }

            a {
              text-underline-offset: 5px;

              svg {
                margin-left: 12px;
              }
            }
          }
        }
      }
    }

    &.about {
      margin-bottom: 0;

      @media screen and (min-width: 968px) {
        margin-bottom: 58px;
      }
    }
  }
}

h2,
h3,
h4 {
  font-weight: 500;
}

h2 {
  font-size: 36px;
}

h3 {
  font-size: 20px;
}

body {
  min-width: 100vw;

  &::before {
    content: "";
    background: $light;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -2;
    width: 100%;
    height: 100%;
    opacity: 1;
  }

  &::after {
    content: "";
    background: url("../img/bg.jpg");
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    width: 100%;
    height: 100%;
    opacity: 0.4;
  }
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

a:link,
a:visited {
  color: $link;
  transition: color 0.15s ease-in-out;
}

a:hover,
a:active {
  color: $dark;
}

.dottedBorder {
  position: relative;
  overflow: hidden;

  &:after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 20px;
    background: repeating-linear-gradient(to right,
        $dark,
        $dark 5px,
        transparent 5px,
        transparent 10px);
    z-index: -1;

    @media screen and (min-width: 1160px) {
      background: repeating-linear-gradient(to right,
          $dark,
          $dark 7px,
          transparent 7px,
          transparent 14px);
    }
  }
}

